2004-04-04  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx.conf backend/gt68xx_devices.c
	  backend/gt68xx_mid.c doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES:
	  Added BGR color order for pixel mode. Plustek OpticPro U16B works
	  in color mode now. Made 600 dpi mode for Mustek BearPaw 2400 TA
	  Plus a bit faster. Changed Mustek ScanExpress A3 linedistance
	  correction. Added detection of Visioneer Onetouch 7300.
	* doc/descriptions/unsupported.desc: Removed Canon D660. Now
	  supported by plustek backend.

2004-04-04  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/descriptions/plustek.desc: added Canon D660U.
	* doc/plustek/Plustek-USB.changes doc/plustek/Plustek-USB-TODO.txt
	  doc/plustek/Plustek-USB.txt: update
	* po/sane-backends.*.po: new strings, as the plustek backend has changed.
	* backend/plustek.[ch], plustek-usb.[ch], plustek-usb.cal.c,
	  plustek-usbdevs.c, plustek-usbhw.c, plustek-usbimg.c,
	  plustek-usbshading.c: added Canon D660U support, cleanup, bug-fixing.
	* backend/plustek.conf: added red_lampoff, green_lampoff and blue_lampoff
	  parameters.

2004-04-02  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* snapscan.c snapscan-options.c snapscan-scsi.c:
	  Various bugfixes for gamma correction (Thanks to Robert Tsien)
	* po/sane-backends.de.po: Fix translation for "gamma table"

2004-04-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* NEWS: Updated for sane-backends 1.0.14.
	* README.linux: Added some hints about setting permissions with
	  libusb on Linux 2.6. Removed some obsolete paragraphs.
	* config.guess config.sub: Updated from stable libtool.
	* doc/descriptions/unsupported.desc: Added Relisys Episode scanner.

2004-03-29  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* sanei/sanei_scsi.c: Increased SCSI buffer size on MacOS X.
	  Patch from Mattias Ellert, bug #300601.

2004-03-28  Henning Meier-Geinitz <henning@meier-geinitz.de>
